--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "axios": "^0.19.0",
     "bull": "^3.12.1",
     "dotenv": "^8.2.0",
-    "googleapis": "^46.0.0"
+    "googleapis": "^46.0.0",
+    "orbs-client-sdk": "^2.2.2"
   },
   "devDependencies": {},
   "scripts": {
