--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bull": "^3.12.1",
     "dotenv": "^8.2.0",
     "googleapis": "^46.0.0",
+    "ioredis": "^4.14.1",
     "orbs-client-sdk": "^2.2.2"
   },
   "devDependencies": {},
