--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dotenv": "^8.2.0",
     "googleapis": "^46.0.0",
     "ioredis": "^4.14.1",
-    "orbs-client-sdk": "^2.2.2"
+    "orbs-client-sdk": "^2.2.2",
+    "winston": "^3.2.1"
   },
   "devDependencies": {},
   "scripts": {
